<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout   xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context="com.tcs.vendingmachine.Fragments.SummaryFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_gray">
    <TableLayout android:id="@+id/productsTL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        />
    <TableLayout android:id="@+id/totalAmtLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/productsTL"
        android:background="@color/white"
        android:layout_margin="10dp"
        android:gravity="center_horizontal|center_vertical">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/labelTv"
            android:gravity="center_vertical"
            android:text="@string/totalAmt"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/totalAmtTv"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="$1.2"
            android:textColor="@color/blue"
            android:textSize="18sp"
            />
        </TableRow>
    </TableLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:layout_below="@+id/totalAmtLL">
        <LinearLayout android:id="@+id/insertAmtLL"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentLeft="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/labelInsertAmtTv"
                android:layout_gravity="center_horizontal"
                android:paddingTop="5dp"
                android:text="@string/insertAmt"
                android:textSize="18sp"
                />
            <EditText
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:id="@+id/insertAmtEt"
                android:inputType="number"
                android:gravity="center_horizontal"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/blue"
                android:textSize="24sp"
                />
        </LinearLayout>
        <View
            android:layout_width="2dp"
            android:layout_height="80dp"
            android:background="@color/light_gray"
            android:layout_centerInParent="true"/>
        <LinearLayout android:id="@+id/changeLL"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingRight="10dp"
            android:layout_alignParentRight="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/changeLabelTv"
                android:paddingTop="5dp"
                android:layout_alignParentLeft="true"
                android:layout_gravity="center_horizontal"
                android:text="@string/change"
                android:textSize="18sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/changeTv"
                android:layout_alignParentLeft="true"
                android:layout_gravity="center_horizontal|center_vertical"
                android:textColor="@color/blue"
                android:textSize="24sp"
                />
        </LinearLayout>
    </RelativeLayout>
    <Button android:id="@+id/purchaseBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:text="@string/purhase"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>

